Re-organised the entire project, splitting up files and putting them in subdirs. Also made many comments and tired to explain things better

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 # Gitignore File
 
 # IntelliJ project files
+
 .idea
 *.iml
 out
 gen
 
+# VSCode files
+
+.vscode/
+
 # Python Environments
+
 .env
 .venv
 env/
@@ -16,6 +22,7 @@ env.bak/
 venv.bak/
 
 # Python Files
+
 __pycache__/
 *.py[cod]
 *$py.class
